# Calculate_pressure_distribution

./: .gitignore  CMakeLists.txt  README.md
input/: bottompressure.csv  leftpressure.csv  rightpressure.csv  toppressure.csv
src/: csv_reader.cpp  csv_reader.hpp  main.cpp  pressuredistsolver.cpp  pressuredistsolver.hpp
